tests/query_errors/aggregate_aggregate_fail/error.txt
Error: 
    4 |             "z" + []
      |             ^^^^^^^^ The binary operation `+` is not defined for the type `string` and `array`